--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,11 +1,6 @@
-.heroText {
-    width: 45%;
-    font-size: 16px;
-    background-color: rgba( 0, 0, 0, 0.50);
-    box-sizing: border-box;
-    padding: 10px 30px;
-    border-radius: 15px;
-    box-shadow: 2px 4px 5px 0px rgba(0,0,0,0.50);
-    color: #fff;
-    margin: 20px 0 20px 0;
+.heroShape {
+    background-color: #FFF8E8;
+    height: 60vh;
+    width: 20vw;
+    margin-left: 20%;
 }
