--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+html {
+  /* font-size: 10px; */
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+p {
+  line-height: 1.6;
+  letter-spacing: 0.5px;
+  margin-top: 10px;
+  font-size: 1.175rem;
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 4.8rem;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 4rem;
+  font-weight: medium;
+}
+
+h3 {
+  font-size: 3.2rem;
+  font-weight: medium;
+}
+
+h4 {
+  font-size: 2.4rem;
+  font-weight: medium;
+}
+
+h5 {
+  font-size: 2rem;
+  font-weight: medium;
+}
+
+h6 {
+  font-size: 1.6rem;
+  font-weight: medium;
 }
 
 code {
