--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,6 +1,28 @@
 .heroShape {
-    background-color: #FFF8E8;
-    height: 60vh;
-    width: 20vw;
-    margin-left: 20%;
+    background-color: #FFFDF8;
+    height: 100%;
+    width: 55%;
+}
+
+.heroImage{
+    height: 100%;
+    width: 55%;
+    margin-left: 45%;
+}
+
+section {
+    margin-bottom: 10%;
+}
+
+.diagonalBox {
+    transform: skewY(-11deg);
+    -webkit-transform: skewY(-11deg);
+    background-image: linear-gradient(45deg, #6303B1, #ff0099);
+    height: 50vh;
+    margin: 50px 0;
+}
+
+.diagonalBoxContent {
+    transform: skewY(11deg);
+    -webkit-transform: skewY(11deg);
 }
