--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 html {
   /* font-size: 10px; */
+  scroll-behavior: smooth;
 }
 
 body {
@@ -23,11 +24,13 @@ h1 {
   font-size: 4.8rem;
   font-weight: bold;
   line-height: 1.2;
+  color: #E9A106;
 }
 
 h2 {
   font-size: 4rem;
   font-weight: medium;
+  color: #E9A106;
 }
 
 h3 {
