--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -4,7 +4,7 @@ footer{
     background-color: #830B2D;
     box-sizing: border-box;
     color: #fff;
-    padding: 5%;
+    padding: 3% 0 0 0;
 }
 
 footer ul {
@@ -15,5 +15,19 @@ footer ul {
 
 .socialFooter {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    align-content: flex-start;
+}
+
+.socialFooter li {
+    margin: 0 5% 0 0;
+}
+
+.footerCopyright {
+    margin-top: 2%;
+    min-height: 5vh;
+    max-height: 5vh;
+    padding: 0.55% 0;
+    background-color: #FCD581;
+    color: #000000;
 }
