--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,9 +1,3 @@
-.heroShape {
-    background-color: #FFFDF8;
-    height: 100%;
-    width: 55%;
-}
-
 .heroImage{
     max-height: 100%;
     max-width: 55%;
@@ -18,7 +12,7 @@
     transform: skewY(-11deg);
     -webkit-transform: skewY(-11deg);
     background-color: #830B2D;
-    max-height: 70vh;
+    max-height: 85vh;
     margin: 30% 0;
     padding: 15% 0;
 }
@@ -30,11 +24,45 @@
 }
 
 .beerIllustration {
-    margin: 0 auto;
+    width: 250px;
 }
 
 @media screen and (max-width: 1000px) {
     .heroImage {
         margin: 10% 0 0 25%;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .tagline {
+        font-size: 4rem;
+        text-align: center;
+    }
+
+    h2, p {
+        text-align: center;
+    }
+
+    .beerIllustration {
+        width: 150px;
+    }
+
+    .heroImage {
+        margin: 10% 0 10% 25%;
+    }
+
+    .buttonCenterUtil {
+        display:  flex;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    p {
+        font-size: 14px;
+    }
+
+    .diagonalBox {
+        max-height: 100vh;
     }
 }
