--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 html {
-  /* font-size: 10px; */
+  font-size: 10px;
   scroll-behavior: smooth;
 }
 
@@ -12,11 +12,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
+
 p {
   line-height: 1.6;
   letter-spacing: 0.5px;
   margin-top: 10px;
-  font-size: 1.175rem;
+  font-size: 1.6rem;
   font-weight: normal;
 }
 
@@ -56,4 +60,42 @@ h6 {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media screen and (min-width: 750px) {
+  
+}
+
+@media screen and (min-width: 1000px) {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: initial;
+  }
+
+  p {
+    font-size: 2.4rem;
+  }
+
+  h1 {
+    font-size: 6.8rem;
+  }
+  
+  h2 {
+    font-size: 6rem;
+  }
+  
+  h3 {
+    font-size: 4.2rem;
+  }
+  
+  h4 {
+    font-size: 3.4rem;
+  }
+  
+  h5 {
+    font-size: 2.4rem;
+  }
+  
+  h6 {
+    font-size: 1.6rem;
+  }
 }
