--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -48,10 +48,15 @@
     .Illustration {
         width: 75%;
     }
+}
 
-    .centerContent {
-        margin: 0 auto;
-        width: 70vw;
+@media screen and (min-width: 1000px) {
+    .heroImage {
+        max-width: 80%;
+    }
+
+    .Illustration {
+        width: 100%;
     }
 }
 /* 
