Mobile first styling

--- a/src/Components/Cards/Card/Card.module.css
+++ b/src/Components/Cards/Card/Card.module.css
@@ -1,14 +1,32 @@
 .card {
-    width: 250px;
-    height: 450px;
+    width: 40vh;
+    height: 50vh;
     background-color: #E9ECEF;
     color: #333;
     box-sizing: border-box;
     padding: 10px 20px;
-    margin: 20px 10px;
+    margin: 5% auto;
+    font-size: 1.6rem;
 }
 
-@media screen and (max-width: 770px) {
+.card img {
+    width: 75%;
+    margin: 0 auto;
+}
+
+.card-title {
+    font-size: 2.4rem;
+}
+
+.card-subtitle {
+    font-size: 1.6rem;
+}
+
+.card-text {
+    font-size: 1.4rem;
+}
+
+/* @media screen and (max-width: 770px) {
     .card {
         min-width: 80%;
         margin: 5% auto;
@@ -18,4 +36,4 @@
         width: 75%;
         margin: 0 auto;
     }
-}
+} */
